--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^18.1.0",
     "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
+    "react-sortablejs": "^6.1.1",
+    "sortablejs": "^1.15.0",
+    "usehooks-ts": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
